successfully inputted suicide data

--- a/notebooks/newModel/BertTest.ipynb
+++ b/notebooks/newModel/BertTest.ipynb
@@ -32,37 +32,37 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 374
+          "height": 354
         },
-        "outputId": "7b1d3949-9eb1-4820-c966-3f9bccc070d7"
+        "outputId": "49c342e5-f602-4338-acb8-09b6e9925085"
       },
       "source": [
         "!pip install transformers"
       ],
-      "execution_count": 70,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: transformers in /usr/local/lib/python3.6/dist-packages (3.0.1)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.5)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.23.0)\n",
-            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers) (0.0.43)\n",
-            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.41.1)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
             "Requirement already satisfied: packaging in /usr/local/lib/python3.6/dist-packages (from transformers) (20.4)\n",
-            "Requirement already satisfied: sentencepiece!=0.1.92 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.1.91)\n",
+            "Requirement already satisfied: tokenizers==0.8.0-rc4 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.8.0rc4)\n",
             "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.6/dist-packages (from transformers) (2019.12.20)\n",
             "Requirement already satisfied: dataclasses; python_version < \"3.7\" in /usr/local/lib/python3.6/dist-packages (from transformers) (0.7)\n",
-            "Requirement already satisfied: tokenizers==0.8.0-rc4 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.8.0rc4)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.0.12)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.0.4)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from transformers) (1.18.5)\n",
+            "Requirement already satisfied: sentencepiece!=0.1.92 in /usr/local/lib/python3.6/dist-packages (from transformers) (0.1.91)\n",
+            "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.6/dist-packages (from transformers) (4.41.1)\n",
+            "Requirement already satisfied: sacremoses in /usr/local/lib/python3.6/dist-packages (from transformers) (0.0.43)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2020.6.20)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.0.4)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2.9)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.24.3)\n",
-            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.2)\n",
+            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers) (2.4.7)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from packaging->transformers) (1.12.0)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (0.15.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (1.12.0)\n",
-            "Requirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.6/dist-packages (from packaging->transformers) (2.4.7)\n"
+            "Requirement already satisfied: click in /usr/local/lib/python3.6/dist-packages (from sacremoses->transformers) (7.1.2)\n"
           ],
           "name": "stdout"
         }
@@ -92,7 +92,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 71,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -104,15 +104,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 265
         },
-        "outputId": "277b2ba3-a421-4c91-e248-5735821c9bd9"
+        "outputId": "4484c7f0-628a-439d-cdf7-ed5a6ff36575"
       },
       "source": [
         "df = pd.read_csv('data_for_model.csv')\n",
-        "batch_1 = full_dataset[['megatext_clean', 'is_suicide']]\n",
+        "batch_1 = df[['megatext_clean', 'is_suicide']]\n",
         "\n",
         "print(batch_1)"
       ],
-      "execution_count": 72,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,12 +145,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 70
         },
-        "outputId": "c43d7630-8974-4f88-ef46-68ba403fcf03"
+        "outputId": "cd2ff50e-47bf-4bbe-e134-6639e40d6675"
       },
       "source": [
         "batch_1['is_suicide'].value_counts()"
       ],
-      "execution_count": 73,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 4
         }
       ]
     },
@@ -186,7 +186,7 @@
         "tokenizer = tokenizer_class.from_pretrained(pretrained_weights)\n",
         "model = model_class.from_pretrained(pretrained_weights)"
       ],
-      "execution_count": 74,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -194,47 +194,14 @@
       "metadata": {
         "id": "WDyDgZfZ7cLA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 427
-        },
-        "outputId": "67d07813-93bb-4142-8be8-2663656523a4"
+        "colab": {}
       },
       "source": [
         "#figure out how to fix the token sequence length problem\n",
-        "tokenized = batch_1['megatext_clean'].apply((lambda x: tokenizer.encode(x, add_special_tokens=True)))"
+        "tokenized = batch_1['megatext_clean'].apply((lambda x: tokenizer.encode(x, add_special_tokens=True, truncation=True, max_length=512)))"
       ],
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1597 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (840 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1460 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (835 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (725 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1553 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (986 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (545 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (538 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1295 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (878 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1119 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (549 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (2246 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1319 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (1464 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (548 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (558 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (605 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (589 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (519 > 512). Running this sequence through the model will result in indexing errors\n",
-            "Token indices sequence length is longer than the specified maximum sequence length for this model (673 > 512). Running this sequence through the model will result in indexing errors\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -251,7 +218,7 @@
         "\n",
         "padded = np.array([i + [0]*(max_len-len(i)) for i in tokenized.values])"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -263,24 +230,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "83b1692a-5f54-4a39-8c2d-c9e1960f3b43"
+        "outputId": "5112fec8-fcc4-435d-dfa9-4a78a5561950"
       },
       "source": [
         "np.array(padded).shape"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(2000, 59)"
+              "(1897, 512)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 8
         }
       ]
     },
@@ -293,25 +260,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f3954688-ebcd-4506-c2a3-2aa820e742f8"
+        "outputId": "7141ebeb-6cb2-4537-9f6d-0a96f8db8131"
       },
       "source": [
         "attention_mask = np.where(padded != 0, 1, 0)\n",
         "attention_mask.shape"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(2000, 59)"
+              "(1897, 512)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 9
         }
       ]
     },
@@ -378,76 +345,34 @@
       "metadata": {
         "id": "oG9z4HKP700E",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "5f6e0e08-8940-4185-d605-60d78122b372"
+        "colab": {}
       },
       "source": [
         "lr_clf = LogisticRegression()\n",
         "lr_clf.fit(train_features, train_labels)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
-              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
-              "                   warm_start=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 46
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XzrE7wLH75LS",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "33771675-b3e2-4951-cff0-c7014d8f8c9a"
+        "colab": {}
       },
       "source": [
         "lr_clf.score(test_features, test_labels)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.806"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zH4D2QR475m8",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "660d97ee-528d-44f5-a685-d070e7154638"
+        "colab": {}
       },
       "source": [
         "from sklearn.dummy import DummyClassifier\n",
@@ -457,15 +382,7 @@
         "print(\"Dummy classifier score: %0.3f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Dummy classifier score: 0.493 (+/- 0.08)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
