--- a/notebooks/newModel/BertTest.ipynb
+++ b/notebooks/newModel/BertTest.ipynb
@@ -37,9 +37,10 @@
         "outputId": "49c342e5-f602-4338-acb8-09b6e9925085"
       },
       "source": [
+        "#installing transformers in colab only -- remove if using on diff tpu\n",
         "!pip install transformers"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,6 +77,7 @@
         "colab": {}
       },
       "source": [
+        "#importing relevant libraries\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -92,7 +94,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,12 +109,13 @@
         "outputId": "4484c7f0-628a-439d-cdf7-ed5a6ff36575"
       },
       "source": [
+        "#reading suicide data csv, batch_1 csv is all relevant data for training\n",
         "df = pd.read_csv('data_for_model.csv')\n",
         "batch_1 = df[['megatext_clean', 'is_suicide']]\n",
         "\n",
         "print(batch_1)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,9 +151,10 @@
         "outputId": "cd2ff50e-47bf-4bbe-e134-6639e40d6675"
       },
       "source": [
+        "#how many ppl are suicidal(1) vs depressed(0)\n",
         "batch_1['is_suicide'].value_counts()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,17 +180,14 @@
         "colab": {}
       },
       "source": [
-        "# For DistilBERT:\n",
-        "#model_class, tokenizer_class, pretrained_weights = (ppb.DistilBertModel, ppb.DistilBertTokenizer, 'distilbert-base-uncased')\n",
-        "\n",
-        "## Want BERT instead of distilBERT? Uncomment the following line:\n",
+        "#initializing bert base model in the program\n",
         "model_class, tokenizer_class, pretrained_weights = (ppb.BertModel, ppb.BertTokenizer, 'bert-base-uncased')\n",
         "\n",
-        "# Load pretrained model/tokenizer\n",
+        "# Loading pretrained model/tokenizer\n",
         "tokenizer = tokenizer_class.from_pretrained(pretrained_weights)\n",
         "model = model_class.from_pretrained(pretrained_weights)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,10 +198,10 @@
         "colab": {}
       },
       "source": [
-        "#figure out how to fix the token sequence length problem\n",
+        "#tokenizing the actual sentences\n",
         "tokenized = batch_1['megatext_clean'].apply((lambda x: tokenizer.encode(x, add_special_tokens=True, truncation=True, max_length=512)))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +219,7 @@
         "\n",
         "padded = np.array([i + [0]*(max_len-len(i)) for i in tokenized.values])"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +236,7 @@
       "source": [
         "np.array(padded).shape"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +267,7 @@
         "attention_mask = np.where(padded != 0, 1, 0)\n",
         "attention_mask.shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,6 +349,7 @@
         "colab": {}
       },
       "source": [
+        "#currently logistic regression. When we find a neural network, substitute it here and onwards\n",
         "lr_clf = LogisticRegression()\n",
         "lr_clf.fit(train_features, train_labels)"
       ],
@@ -375,6 +377,7 @@
         "colab": {}
       },
       "source": [
+        "#comparing above score with dummy classifier score\n",
         "from sklearn.dummy import DummyClassifier\n",
         "clf = DummyClassifier()\n",
         "\n",
