--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -12,7 +12,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import array\n",
@@ -57,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_data = pd.read_csv('../data/data_for_model.csv', keep_default_na=False)"
+    "model_data = pd.read_csv('../data/scheme1.csv', keep_default_na=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +98,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
        "      <th>title</th>\n",
        "      <th>selftext</th>\n",
        "      <th>author</th>\n",
@@ -102,11 +112,15 @@
        "      <th>selftext_length</th>\n",
        "      <th>title_length</th>\n",
        "      <th>megatext_clean</th>\n",
+       "      <th>Clustered Labels</th>\n",
+       "      <th>New Labels</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Our most-broken and least-understood rules is ...</td>\n",
        "      <td>We understand that most people who reply immed...</td>\n",
        "      <td>SQLwitch</td>\n",
@@ -119,9 +133,13 @@
        "      <td>4792</td>\n",
        "      <td>144</td>\n",
        "      <td>sql witch understand people reply immediately ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>Regular Check-In Post</td>\n",
        "      <td>Welcome to /r/depression's check-in post - a p...</td>\n",
        "      <td>circinia</td>\n",
@@ -134,9 +152,13 @@
        "      <td>650</td>\n",
        "      <td>21</td>\n",
        "      <td>c irc welcome r depression check post place ta...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>I hate it so much when you try and express you...</td>\n",
        "      <td>I've been feeling really depressed and lonely ...</td>\n",
        "      <td>TheNewKiller69</td>\n",
@@ -149,12 +171,19 @@
        "      <td>1866</td>\n",
        "      <td>137</td>\n",
        "      <td>new killer 69 feeling really depressed lonely ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
+       "   Unnamed: 0  Unnamed: 0.1  \\\n",
+       "0           0             0   \n",
+       "1           1             1   \n",
+       "2           2             2   \n",
+       "\n",
        "                                               title  \\\n",
        "0  Our most-broken and least-understood rules is ...   \n",
        "1                              Regular Check-In Post   \n",
@@ -190,13 +219,18 @@
        "1              650            21   \n",
        "2             1866           137   \n",
        "\n",
-       "                                      megatext_clean  \n",
-       "0  sql witch understand people reply immediately ...  \n",
-       "1  c irc welcome r depression check post place ta...  \n",
-       "2  new killer 69 feeling really depressed lonely ...  "
+       "                                      megatext_clean  Clustered Labels  \\\n",
+       "0  sql witch understand people reply immediately ...                 1   \n",
+       "1  c irc welcome r depression check post place ta...                 1   \n",
+       "2  new killer 69 feeling really depressed lonely ...                 0   \n",
+       "\n",
+       "   New Labels  \n",
+       "0           1  \n",
+       "1           1  \n",
+       "2           0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,169 +853,6 @@
     "tvec_optimised = TfidfVectorizer(max_df= 0.5, max_features=70, min_df=2, ngram_range=(1, 3),stop_words = 'english')\n",
     "X_train_tvec = tvec_optimised.fit_transform(X_train).todense()\n",
     "X_test_tvec = tvec_optimised.transform(X_test).todense()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer = Tokenizer(num_words=70)\n",
-    "tokenizer.fit_on_texts(X_train)\n",
-    "\n",
-    "X_train = tokenizer.texts_to_sequences(X_train)\n",
-    "X_test = tokenizer.texts_to_sequences(X_test)\n",
-    "\n",
-    "vocab_size = len(tokenizer.word_index) + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings_dictionary = dict()\n",
-    "\n",
-    "embedding_matrix = zeros((vocab_size, 70))\n",
-    "for word, index in tokenizer.word_index.items():\n",
-    "    embedding_vector = embeddings_dictionary.get(word)\n",
-    "    if embedding_vector is not None:\n",
-    "        embedding_matrix[index] = embedding_vector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Sequential()\n",
-    "\n",
-    "embedding_layer = Embedding(vocab_size, 70, weights=[embedding_matrix], input_length=70 , trainable=False)\n",
-    "model.add(embedding_layer)\n",
-    "\n",
-    "model.add(keras.layers.Conv1D(128, 5, activation='relu'))\n",
-    "model.add(GlobalMaxPooling1D())\n",
-    "model.add(Dense(1, activation='sigmoid'))\n",
-    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['acc'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50\n",
-      "48/48 [==============================] - 1s 22ms/step - loss: 0.6932 - acc: 0.4944 - val_loss: 0.6931 - val_acc: 0.5158\n",
-      "Epoch 2/50\n",
-      "48/48 [==============================] - 1s 16ms/step - loss: 0.6930 - acc: 0.5168 - val_loss: 0.6930 - val_acc: 0.5158\n",
-      "Epoch 3/50\n",
-      "48/48 [==============================] - 1s 18ms/step - loss: 0.6929 - acc: 0.5168 - val_loss: 0.6929 - val_acc: 0.5158\n",
-      "Epoch 4/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6928 - acc: 0.5168 - val_loss: 0.6928 - val_acc: 0.5158\n",
-      "Epoch 5/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6928 - acc: 0.5168 - val_loss: 0.6928 - val_acc: 0.5158\n",
-      "Epoch 6/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6928 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 7/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 8/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6928 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 9/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 10/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 11/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 12/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 13/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 14/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 15/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 16/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 17/50\n",
-      "48/48 [==============================] - 1s 13ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 18/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 19/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 20/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 21/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 22/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 23/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 24/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 25/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 26/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 27/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 28/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 29/50\n",
-      "48/48 [==============================] - 1s 15ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 30/50\n",
-      "48/48 [==============================] - 1s 17ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 31/50\n",
-      "48/48 [==============================] - 1s 15ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 32/50\n",
-      "48/48 [==============================] - 1s 13ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 33/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 34/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 35/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 36/50\n",
-      "48/48 [==============================] - 1s 12ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 37/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 38/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 39/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 40/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 41/50\n",
-      "48/48 [==============================] - 1s 11ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 42/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6927 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 43/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6926 - val_acc: 0.5158\n",
-      "Epoch 44/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 45/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 46/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 47/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 48/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 49/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n",
-      "Epoch 50/50\n",
-      "48/48 [==============================] - 0s 10ms/step - loss: 0.6926 - acc: 0.5168 - val_loss: 0.6927 - val_acc: 0.5158\n"
-     ]
-    }
-   ],
-   "source": [
-    "history = model.fit(X_train_tvec, y_train, batch_size=32, epochs=50, verbose=1, validation_data=(X_test_tvec, y_test))"
    ]
   },
   {
