--- a/notebooks/unsupervised_text_clustering.ipynb
+++ b/notebooks/unsupervised_text_clustering.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +198,32 @@
     "# centers = fitted.centroids once we get the Kmeans class working, we can graph centroids\n",
     "centers = np.array(modelkmeans.cluster_centers_)\n",
     "plt.scatter(centers[:, 0], centers[:, 1],c='red', s=300, alpha=0.6);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted = modelkmeans.predict(X_train_tvec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 0 ... 1 0 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predicted)"
    ]
   },
   {
@@ -2141,6 +2167,15 @@
    ],
    "source": [
     "print(df['New Labels'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"scheme1.csv\")"
    ]
   },
   {
