76% on new labeling scheme

--- a/notebooks/unsupervised_text_clustering.ipynb
+++ b/notebooks/unsupervised_text_clustering.ipynb
@@ -202,28 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted = modelkmeans.predict(X_train_tvec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 0 ... 1 0 1]\n"
+      "1878.7917424456753\n"
      ]
     }
    ],
    "source": [
-    "print(predicted)"
+    "print(modelkmeans.inertia_)"
    ]
   },
   {
